# algos

./: CHANGELOG.md  _.json  algo.cabal  algo.hp
app/: Main.hs  State.hs  colours.ts  cycle.ts  greeting.ts
app/Algo/: CatAndMouse.hs  CatAndMouse2.hs  CryptoPal.hs  CryptoPalInput.hs  Cycle.hs  DC.hs  HexToBase64.hs  HighestColour.hs  Printf.hs  RepMin.hs  Scanz.hs  State.hs  StringCompression.hs  Tree.hs  foldlr.hs
