cabal-version:      2.4
name:               algo
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hacke Wayne
maintainer:         hacklew@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable algo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Algo.Cycle
        , Algo.State
        , Algo.HighestColour
        , Algo.CatAndMouse
        , Algo.CryptoPal
        , Algo.CryptoPalInput


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base
        , pqueue
        , containers
        , parsec
        , mtl
        , split
        , lens
        , composition-prelude
        , matrix
        , lens
        , newtype
        , digits
        , base64-bytestring
        , hex
        , bytestring
        , extra
        , text-metrics
        , text
        , ghc
        , cryptonite
        , composition
        , random
    hs-source-dirs:   app
    default-language: Haskell2010
